MDEV-8240 : Unknown option 'table_type' when using Connect Engine on MGC

MariaDB Galera server's (MGC) handlerton & THD structures have
some extra wsrep members as compared to MariaDB server. As a
result, when plugins from packages, built along with MariaDB
server like Connect & OQGraph are loaded and accessed by MGC,
the objects may get initialized improperly.

Fixed by moving the wsrep-additions to the end of the structure.