sql/sql_class.h
@@ -2783,46 +2783,7 @@ public:
     query_id_t first_query_id;
   } binlog_evt_union;
 
-#ifdef WITH_WSREP
-  const bool                wsrep_applier; /* dedicated slave applier thread */
-  bool                      wsrep_applier_closing; /* applier marked to close */
-  bool                      wsrep_client_thread; /* to identify client threads*/
-  enum wsrep_exec_mode      wsrep_exec_mode;
-  query_id_t                wsrep_last_query_id;
-  enum wsrep_query_state    wsrep_query_state;
-  enum wsrep_conflict_state wsrep_conflict_state;
-  mysql_mutex_t             LOCK_wsrep_thd;
-  // changed from wsrep_seqno_t to wsrep_trx_meta_t in wsrep API rev 75
-  // wsrep_seqno_t             wsrep_trx_seqno;
-  wsrep_trx_meta_t          wsrep_trx_meta;
-  uint32                    wsrep_rand;
-  rpl_group_info*           wsrep_rgi;
-  bool                      wsrep_converted_lock_session;
-  wsrep_ws_handle_t         wsrep_ws_handle;
-#ifdef WSREP_PROC_INFO
-  char                      wsrep_info[128]; /* string for dynamic proc info */
-#endif /* WSREP_PROC_INFO */
-  ulong                     wsrep_retry_counter; // of autocommit
-  bool                      wsrep_PA_safe;
-  char*                     wsrep_retry_query;
-  size_t                    wsrep_retry_query_len;
-  enum enum_server_command  wsrep_retry_command;
-  enum wsrep_consistency_check_mode 
-                            wsrep_consistency_check;
-  wsrep_stats_var*          wsrep_status_vars;
-  int                       wsrep_mysql_replicated;
-  const char*               wsrep_TOI_pre_query; /* a query to apply before
-                                                    the actual TOI query */
-  size_t                    wsrep_TOI_pre_query_len;
-  wsrep_po_handle_t         wsrep_po_handle;
-  size_t                    wsrep_po_cnt;
-  my_bool                   wsrep_po_in_trans;
-#ifdef GTID_SUPPORT
-  rpl_sid                   wsrep_po_sid;
-#endif /*  GTID_SUPPORT */
-  void*                     wsrep_apply_format;
-  bool                      wsrep_apply_toi; /* applier processing in TOI */
-#endif /* WITH_WSREP */
+
   /**
     Internal parser state.
     Note that since the parser is not re-entrant, we keep only one parser
@@ -3857,6 +3818,47 @@ public:
     return (temporary_tables ||
             (rgi_slave && rgi_have_temporary_tables()));
   }
+
+#ifdef WITH_WSREP
+  const bool                wsrep_applier; /* dedicated slave applier thread */
+  bool                      wsrep_applier_closing; /* applier marked to close */
+  bool                      wsrep_client_thread; /* to identify client threads*/
+  enum wsrep_exec_mode      wsrep_exec_mode;
+  query_id_t                wsrep_last_query_id;
+  enum wsrep_query_state    wsrep_query_state;
+  enum wsrep_conflict_state wsrep_conflict_state;
+  mysql_mutex_t             LOCK_wsrep_thd;
+  // changed from wsrep_seqno_t to wsrep_trx_meta_t in wsrep API rev 75
+  // wsrep_seqno_t             wsrep_trx_seqno;
+  wsrep_trx_meta_t          wsrep_trx_meta;
+  uint32                    wsrep_rand;
+  rpl_group_info*           wsrep_rgi;
+  bool                      wsrep_converted_lock_session;
+  wsrep_ws_handle_t         wsrep_ws_handle;
+#ifdef WSREP_PROC_INFO
+  char                      wsrep_info[128]; /* string for dynamic proc info */
+#endif /* WSREP_PROC_INFO */
+  ulong                     wsrep_retry_counter; // of autocommit
+  bool                      wsrep_PA_safe;
+  char*                     wsrep_retry_query;
+  size_t                    wsrep_retry_query_len;
+  enum enum_server_command  wsrep_retry_command;
+  enum wsrep_consistency_check_mode
+                            wsrep_consistency_check;
+  wsrep_stats_var*          wsrep_status_vars;
+  int                       wsrep_mysql_replicated;
+  const char*               wsrep_TOI_pre_query; /* a query to apply before
+                                                    the actual TOI query */
+  size_t                    wsrep_TOI_pre_query_len;
+  wsrep_po_handle_t         wsrep_po_handle;
+  size_t                    wsrep_po_cnt;
+  my_bool                   wsrep_po_in_trans;
+#ifdef GTID_SUPPORT
+  rpl_sid                   wsrep_po_sid;
+#endif /*  GTID_SUPPORT */
+  void*                     wsrep_apply_format;
+  bool                      wsrep_apply_toi; /* applier processing in TOI */
+#endif /* WITH_WSREP */
 };
 
 
